--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "mdbreact": "^4.23.1",
+    "@material-ui/core": "^4.8.0",
+    "@material-ui/icons": "^4.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^3.4.0",
+    "style-loader": "^1.1.1"
   }
 }
